<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.goldendance.client.register.RegisterActivity">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:background="@mipmap/register_head_bg" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:src="@mipmap/i_back" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:padding="16dp"
                android:text="注册"
                android:textColor="#FFFFFF"
                android:textSize="@dimen/title_head" />
        </FrameLayout>
        <!--手机号-->
        <FrameLayout
            android:layout_width="255dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_edittext"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:padding="10dp"
                android:src="@mipmap/i_phone" />

            <EditText
                android:id="@+id/etMobile"
                style="@style/login_register_edit"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="35dp"
                android:background="@null"
                android:hint="@string/input_phone"
                android:inputType="phone"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/ivClearMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:padding="10dp"
                android:src="@mipmap/i_clear" />
        </FrameLayout>
        <!--验证码-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <FrameLayout
                android:layout_width="173dp"
                android:layout_height="45dp"
                android:background="@drawable/bg_edittext"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical|left"
                    android:padding="10dp"
                    android:src="@mipmap/i_code" />

                <EditText
                    android:id="@+id/etMobileCode"
                    style="@style/login_register_edit"
                    android:layout_width="96dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="35dp"
                    android:background="@null"
                    android:hint="@string/input_code"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/ivClearMobileCode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|center_vertical"
                    android:padding="10dp"
                    android:src="@mipmap/i_clear" />
            </FrameLayout>

            <TextView
                android:id="@+id/tvMobileCode"
                android:layout_width="70dp"
                android:layout_height="34dp"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_submit"
                android:gravity="center"
                android:inputType="number"
                android:text="获取验证码"
                android:textColor="@android:color/white"
                android:textSize="11sp" />
        </LinearLayout>
        <!--密码-->
        <FrameLayout
            android:layout_width="255dp"
            android:layout_height="45dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/bg_edittext"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|left"
                android:padding="10dp"
                android:src="@mipmap/i_psw" />

            <EditText
                android:id="@+id/etPassword"
                style="@style/login_register_edit"
                android:layout_width="166dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="35dp"
                android:hint="@string/input_psw"
                android:inputType="textPassword" />

            <ImageView
                android:id="@+id/ivClearPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|right"
                android:padding="10dp"
                android:src="@mipmap/i_clear" />
        </FrameLayout>

        <ProgressBar
            android:id="@+id/pdLoading"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="invisible" />

        <TextView
            android:id="@+id/tvSubmit"
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="39dp"
            android:background="@drawable/bg_submit"
            android:gravity="center"
            android:text="@string/register"
            android:textColor="@android:color/white"
            android:textSize="18dp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"

            android:layout_marginBottom="10dp"
            android:layout_marginTop="50dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/no_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/has_account"
                android:textColor="#919499"
                android:textSize="13sp" />

            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/no_account"
                android:text="@string/login"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />

        </RelativeLayout>
    </LinearLayout>
</ScrollView>
